--- a/ui.html
+++ b/ui.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/praxis-engineering/job/oBeDafwm'>Praxis Engineering Careers - UI/UX Designer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/forgerock/jobs/4347983002'>Job Application for Senior UI Engineer at ForgeRock</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -56,7 +60,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retailindia/jobs/1767781'>Job Application for Senior UI Developer at Endurance International Group - India</a></h5> 
+<h5><a href='https://boards.greenhouse.io/retailindia/jobs/1767781'>Job Application for Senior UI Developer at Endurance International Group - India</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -64,7 +68,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692283821-ui-ux-designer'>Lecle Vietnam UI/UX Designer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692283821-ui-ux-designer'>Lecle Vietnam UI/UX Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam Vietnam</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -91,7 +95,7 @@ team. You are an ideal candidate if you have previously worked on parking?...</p
 <p>5 days ago ... I agree with the JOIN Terms & Conditions and Data Privacy Policy. APPLY FOR 
 THIS JOB. Already applied? Check the status of your application. Share this job:.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://deposit-solutions.workable.com/j/7658BED05C'>Deposit Solutions GmbH - Jobs: UX/UI Designer - Apply online</a></h5> 
+<h5><a href='https://deposit-solutions.workable.com/j/7658BED05C'>Deposit Solutions GmbH - Jobs: UX/UI Designer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -99,7 +103,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/3pillarglobal/b26abd2d-57a7-41ad-8890-bffe7b901f8c'>3Pillar Global - Junior UI Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/3pillarglobal/b26abd2d-57a7-41ad-8890-bffe7b901f8c'>3Pillar Global - Junior UI Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -123,7 +127,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ArthurGrandTechnologiesInc/743999692111442-sr-ui-developer-web-developer-need-only-us-citizens-'>Arthur Grand Technologies Inc Sr UI developer / Web developer (Need only US Citizens) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ArthurGrandTechnologiesInc/743999692111442-sr-ui-developer-web-developer-need-only-us-citizens-'>Arthur Grand Technologies Inc Sr UI developer / Web developer (Need only US Citizens) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -135,13 +139,13 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Sydney Sydney</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://caseking.recruitee.com/o/lead-ui-ux-designer-mwd-berlin'>
+<h5><a href='https://caseking.recruitee.com/o/lead-ui-ux-designer-mwd-berlin'>
       Lead UI / UX Designer (m/w/d) - Caseking GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corelight/jobs/1788691'>Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board</a></h5> 
+<h5><a href='https://boards.greenhouse.io/corelight/jobs/1788691'>Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board</a></h5> 
 <p><span class="badge badge-light">San Francisco, California San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -217,7 +221,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ah-recruitment.join.com/jobs/265963-system-architect-m-f-d-secure-element'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Hambu... | JOIN</a></h5> 
+<h5><a href='https://ah-recruitment.join.com/jobs/265963-system-architect-m-f-d-secure-element'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Hambu... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -297,7 +301,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/4295/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/4295/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -325,7 +329,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/4302/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/4302/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -345,7 +349,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/research-assistant-department-of-psychiatry-4298'>Research Assistant - Department of Psychiatry - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/research-assistant-department-of-psychiatry-4298'>Research Assistant - Department of Psychiatry - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -353,7 +357,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/licensed-practical-nurse-holden-comprehensive-cancer-center-chemo-infusion-suite-4296'>Licensed Practical Nurse - Holden Comprehensive Cancer Center Chemo Infusion Suite - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/licensed-practical-nurse-holden-comprehensive-cancer-center-chemo-infusion-suite-4296'>Licensed Practical Nurse - Holden Comprehensive Cancer Center Chemo Infusion Suite - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -412,7 +416,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p>Jul 14, 2019 ... Software Development Engineer - UI Server. USA, CA, Pleasanton. Join our team 
 and experience Workday! It's fun to work in a company where people truly?...</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/custodian-i-4278'>Custodian I - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/custodian-i-4278'>Custodian I - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -424,7 +428,7 @@ and experience Workday! It's fun to work in a company where people truly?...</p>
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/clin-trials-rsrch-associate-4276'>Clin Trials Rsrch Associate - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/clin-trials-rsrch-associate-4276'>Clin Trials Rsrch Associate - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -445,10 +449,6 @@ and experience Workday! It's fun to work in a company where people truly?...</p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
 <h5><a href='https://uiowa.referrals.selectminds.com/jobs/4274/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/4275/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
